--- a/Event Website/src/Front-end/Contact/contact.css
+++ b/Event Website/src/Front-end/Contact/contact.css
@@ -4,7 +4,7 @@
     padding: 1rem;
     background-color: #fff;
     max-width: 645px;
-    margin: 3rem auto; /* Increase top and bottom margin */
+    margin: 3rem auto; 
   }
   
 .Contact_card {
@@ -63,7 +63,6 @@
 }
 
 .Contact_btn {
-    user-select: none;
     border-radius: 0.5rem;
     background-color: #3b82f6;
     padding: 0.75rem 1.5rem;
@@ -84,27 +83,7 @@
     --tw-shadow: var(--tw-shadow-colored);
 }
 
-.Contact_btn:focus {
-    opacity: 0.85;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 
-.Contact_btn:active {
-    opacity: 0.85;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.Contact_btn:disabled {
-    pointer-events: none;
-    opacity: 0.5;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 
 @media (min-width: 768px) {
     .contact-container {
